fixed alignment issue

--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -1,28 +1,26 @@
 /* header area */
-.timeline-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    margin-bottom: 20px;
-    gap: 16px;
-
-    background-color: red;
-}
-
-.timeline-header h2 {
+h2.timeline-header {
     background: linear-gradient(135deg, #1e293b, #3b82f6);
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
 
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+
     font-size: 2rem;
     font-weight: 700;
+
+    gap: 16px;
 }
 
-.timeline-header h2 i {
-    background-color: greenyellow;
+h2.timeline-header i {
+    background-color: #1e293b;
+    font-size: 3rem;
 }
-body.dark .timeline-header h2 {
+body.dark h2.timeline-header  {
     background: linear-gradient(135deg, #cbd5e1, #60a5fa);
     background-clip: text;
     -webkit-background-clip: text;
@@ -88,7 +86,7 @@ body.dark .timeline::before {
     text-align: center;
 }
 .year-badge {
-    background: white;
+    background: rgba(255,255,255,0.6);
     border: 1px solid #e2e8f0;
     border-radius: 100px;
     padding: 16px 10px;
@@ -144,7 +142,8 @@ body.dark .icon-circle {
 /* right side content card */
 .timeline-content {
     flex: 1;
-    background: white;
+    background: rgba(255,255,255,0.2);
+    backdrop-filter: blur(2px);
     border-radius: 1.25rem;
     padding: 1.5rem 1.8rem;
     box-shadow: 0 8px 20px rgba(0,0,0,0.03), 0 2px 6px rgba(0,0,0,0.05);
